update git link

--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -25,7 +25,7 @@
     <footer>
         <div class='flexContainer'>
             <p>Basil Eagle © 2021</p>
-            <a href="https://github.com/EnemigoPython/" target="_blank"><i class="fab fa-github fa-lg" id="footLogo"></i></a>
+            <a href="https://github.com/EnemigoPython/shootout" target="_blank"><i class="fab fa-github fa-lg" id="footLogo"></i></a>
         </div>
     </footer>
 
